--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -29,4 +29,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository_name }}/pubip:latest
+          tags: ghcr.io/${{ github.repository }}/pubip:latest
+
