--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./static_web/Dockerfile
           platforms: linux/amd64
           push: true
           tags: ghcr.io/jas0n0ss/pubip:latest
