--- a/static_web/Dockerfile
+++ b/static_web/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx
-#ADD static_web/* /usr/share/nginx/html
+WORKDIR ./static_web  
 COPY  index.html script.js styles.css /usr/share/nginx/html/ 
