--- a/static_web/Dockerfile
+++ b/static_web/Dockerfile
@@ -1,4 +1,3 @@
 FROM nginx
-WORKDIR ./static_web  
-RUN cd ./static_web
-COPY  index.html script.js styles.css /usr/share/nginx/html/ 
+WORKDIR static_web  
+RUN cp ./static_web/* /usr/share/nginx/html/
