--- a/static_web/Dockerfile
+++ b/static_web/Dockerfile
@@ -1,3 +1,6 @@
 FROM nginx
-WORKDIR static_web  
-COPY ./static_web/* /usr/share/nginx/html/
+WORKDIR /ipweb
+COPY  index.html script.js styles.css /usr/share/nginx/html/
+EXPOSE 80
+
+
